Fixed scrollbar incorrect length for lists

--- a/scss/_builder.scss
+++ b/scss/_builder.scss
@@ -82,9 +82,6 @@ $font-size-base: 16px;
 		min-width:100px;
 		height:100px;
 		
-		flex-direction: column-reverse;
-		display: flex;
-    		
 		margin: 0% 1% 3% 3%;
 		text-align: center;
 		font-weight: normal;
@@ -122,7 +119,7 @@ $font-size-base: 16px;
 
 @mixin block-list-element() {
 		width: 92%;
-		height:180px;
+		height:auto;
 		position:relative;
 		text-align: center;
 		font-weight: normal;
@@ -181,26 +178,28 @@ $font-size-base: 16px;
 			}
 			
 			a.name {
-				display:block;
+				visibility:visible;
 			}
 		}		
 }
 
 @mixin webkit-scrollbar()
 {
-	&::-webkit-scrollbar {
+	::-webkit-scrollbar {
 		width: 0.5rem;
-		background-color: rgba(255,255,255, 0.1);
-		-webkit-box-shadow:none;
+		background-color: rgba(0,0,0, 0.05);
+		//-webkit-box-shadow:none;
 	}
 	 
-	&::-webkit-scrollbar-track {
+	::-webkit-scrollbar-track {
 		-webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.05);
+		background-color: rgba(0,0,0, 0.05);
 	}
 	 
-	&::-webkit-scrollbar-thumb {
+	::-webkit-scrollbar-thumb {
 	  background-color: rgba(0,0,0, 0.15);
-	  outline: 1px solid slategrey;
+	  border-radius:10px;
+	  //outline: 1px solid slategrey;
 	}
 }
 
@@ -271,9 +270,6 @@ body
 #vvveb-builder
 {
 	display: block;
-    flex: 1 1 auto;
-    display: flex;
-    flex-direction: row;
     height: 100%;
 	
 	// panels
@@ -313,11 +309,6 @@ body
 		height:100%;
 		max-height:100%;
 		
-		flex: 1 1 0;
-		display: flex;
-		flex-direction: column;
-		
-		
 
 		#filemanager
 		{
@@ -354,17 +345,15 @@ body
 				height:$builder-filemanager-height - $builder-header-top-height;
 				height:calc( var(--builder-filemanager-height) - #{$builder-header-top-height});
 				padding:0.5rem 0rem;
-				overflow-y: hidden;
-				overflow-x: hidden;
+				overflow: hidden;
 				
-				&:hover
-				{
+				&:hover{
 					overflow-y: auto;
 				}
 				
 				resize:vertical;
 				
-				@include webkit-scrollbar();
+				//@include webkit-scrollbar();
 			}
 		}
 		
@@ -618,23 +607,9 @@ body
 	
 	.components-list, .blocks-list, .component-properties, .sections-list
 	{
-		height:98%;
-		height:calc(100% - #{$builder-filemanager-height} - #{$drag-items-tabs-height} - #{$builder-header-top-height});
-		height:calc(100% - var(--builder-filemanager-height) - #{$drag-items-tabs-height} - #{$builder-header-top-height} + 100);
-		height:300%;
-		overflow-x: hidden;
 		list-style:none;
 		background: #fafafa;
 		//scrollbar on hover
-		overflow-y:hidden;
-		
-		&:hover
-		{
-			overflow-y:auto;
-		}
-		
-		@include webkit-scrollbar();
-		
 	}
 	
 	& #add-section-box 
@@ -719,7 +694,7 @@ body
 			width:100%;
 		   }	
 		
-		@include webkit-scrollbar();		   
+		//@include webkit-scrollbar();		   
 	}
 	
 	.component-properties
@@ -731,6 +706,8 @@ body
 		
 		.tab-content {
 			padding: 0.5rem 0;
+			overflow-x: hidden;
+			overflow-y: auto;
 		}
 		
 		.nav-tabs {
@@ -1117,10 +1094,10 @@ body
 				pointer-events: all;
 				//border-right:1px solid #eee;
 				line-height:2.2rem;
-			height:32px;
+				height:32px;
 				padding:0;
 				box-shadow:none;
-			background-position: right 0.5rem center;
+				background-position: right 0.5rem center;
 			
 				&:last-child {
 					//border-right:none;
@@ -1128,8 +1105,8 @@ body
 				
 				&[type="color"] {
 					padding: 3px;
-					height:30px;
-					width:32px;
+					//height:30px;
+					//width:32px;
 					box-shadow:none;
 					border:1px solid #ddd;
 					margin:0 0.5rem;
@@ -1153,7 +1130,6 @@ body
 							border: none;
 						}				  
 				}
-
 			}
 			
 			select {
@@ -1237,16 +1213,7 @@ body
 	}
 
 
-
-	::-webkit-scrollbar {
-	  width: 0.8em;
-	  background: #fafafa;
-	}
-	::-webkit-scrollbar-thumb {
-	  background: #ccc;
-	}
-
-
+	//@include webkit-scrollbar();
 
 	#elements-tabs {
 			overflow:hidden;
@@ -1361,14 +1328,18 @@ li[data-type]
   -ms-user-select: none;
   user-select: none;
   width: 100%;
-  height:1300px;
+  overflow:hidden;
  
-  @include webkit-scrollbar();
  
-   > div:hover
+   > div
    {
-	  height: 100vh;
-	  overflow-y: auto;
+	  //height:850px;
+	  overflow:hidden;
+	  //@include webkit-scrollbar();
+ 	  
+	  &:hover {
+		overflow-y: auto;
+	  }
    }	
 	width:100%;
 
@@ -1459,7 +1430,7 @@ li[data-type]
 
 				  a {
 					//color:$blue;
-					display:block;
+					visibility:visible;
 				  }
 				  
 				}
@@ -1482,8 +1453,6 @@ li[data-type]
 	}
 
 	.sections-container {
-		display:flex;
-		flex-direction:column;
 		width:100%;
 		background:#fff;
 		padding-top:1rem;
@@ -1644,11 +1613,13 @@ li[data-type]
 			} 
 			
 			img.preview {
-				display:none;
+				//display:none;
+				max-width:100%;
 			}
 			
 			a.name {
-				display:none;
+				//display:none;
+				visibility:hidden;
 			}
 		}
 	}
@@ -2020,12 +1991,14 @@ ul.autocomplete li.selected
 
 .add-section-btn {
 	@include add-section-btn()
-	margnin:auto;
+	margin:auto;
+	position:absolute;
+	
 	font-size: 21px;
 	width: 36px;
 	height: 36px;
 	
-	display:none;
+	visibility:hidden;
 	top:50%;
 	left:50%;
 	margin-top: -18px;
@@ -2125,16 +2098,16 @@ input[type="color"] {
 	box-shadow:none;
 	
 	  &.form-control-color::-moz-color-swatch{
-			//width: 21px;
-			//height: 21px;
+			min-width: 21px;
+			min-height: 21px;
 			border-radius: 3px;
 			box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.25);
 			border: none;
 	  }
 	  
 		&.form-control-color::-webkit-color-swatch {
-			width: 21px;
-			height: 21px;
+			min-width: 21px;
+			min-height: 21px;
 			//padding:0;
 			border-radius: 3px;
 			box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.25);
